# people_detection

./: .gitattributes  CMakeLists.txt  README.md  my_old_file.txt  test.txt
another_test_dir/: .gitattributes  another.txt
cmake/: FindDarknet.cmake
model/: .gitattributes  yolo-face.cfg  yolo-face_final.weights
src/: detection.cpp
test_dir/: .gitattributes  new_test.txt
